Created Loan Amount Box

--- a/src/main/resources/org/example/_311_assignmentlab02/hello-view.fxml
+++ b/src/main/resources/org/example/_311_assignmentlab02/hello-view.fxml
@@ -22,8 +22,12 @@
             <TextField fx:id="APRTextField" promptText="Enter Annual Interest Rate"/>
         </HBox>
         <HBox spacing = "10.0">
-            <Label text = "Number of Years "/>
+            <Label text = "Number of Years: "/>
             <TextField fx:id="numYearsTextField" promptText="Enter Number of Years"/>
+        </HBox>
+        <HBox spacing="10.0">
+            <Label text = "Loan Amount: "/>
+            <TextField fx:id="LoanAmountTextField" promptText="Enter Loan Amount "/>
         </HBox>
 
 
